@@ -302,12 +302,13 @@ public class Global extends ImporterTopLevel {
      * @exception InstantiationException if unable to instantiate the named class
      */
     public static void loadClass(Context cx, Scriptable thisObj, Object[] args, Function funObj)
-            throws IllegalAccessException, InstantiationException {
+            throws IllegalAccessException, InstantiationException, NoSuchMethodException,
+                    InvocationTargetException {
         Class<?> clazz = getClass(args);
         if (!Script.class.isAssignableFrom(clazz)) {
             throw reportRuntimeError("msg.must.implement.Script");
         }
-        Script script = (Script) clazz.newInstance();
+        Script script = (Script) clazz.getDeclaredConstructor().newInstance();
         script.exec(cx, thisObj);
     }
 
@@ -339,9 +340,9 @@ public class Global extends ImporterTopLevel {
         String filename = Context.toString(args[1]);
         FileOutputStream fos = new FileOutputStream(filename);
         Scriptable scope = ScriptableObject.getTopLevelScope(thisObj);
-        ScriptableOutputStream out = new ScriptableOutputStream(fos, scope);
-        out.writeObject(obj);
-        out.close();
+        try (ScriptableOutputStream out = new ScriptableOutputStream(fos, scope)) {
+            out.writeObject(obj);
+        }
     }
 
     public static Object deserialize(Context cx, Scriptable thisObj, Object[] args, Function funObj)
@@ -350,12 +351,13 @@ public class Global extends ImporterTopLevel {
             throw Context.reportRuntimeError("Expected a filename to read the serialization from");
         }
         String filename = Context.toString(args[0]);
-        FileInputStream fis = new FileInputStream(filename);
-        Scriptable scope = ScriptableObject.getTopLevelScope(thisObj);
-        ObjectInputStream in = new ScriptableInputStream(fis, scope);
-        Object deserialized = in.readObject();
-        in.close();
-        return Context.toObject(deserialized, scope);
+        try (FileInputStream fis = new FileInputStream(filename)) {
+            Scriptable scope = ScriptableObject.getTopLevelScope(thisObj);
+            try (ObjectInputStream in = new ScriptableInputStream(fis, scope)) {
+                Object deserialized = in.readObject();
+                return Context.toObject(deserialized, scope);
+            }
+        }
     }
 
     public String[] getPrompts(Context cx) {
@@ -1032,14 +1034,12 @@ public class Global extends ImporterTopLevel {
                 is = new FileInputStream(f);
             }
 
-            Reader r;
-            if (charCoding == null) {
-                r = new InputStreamReader(is);
-            } else {
-                r = new InputStreamReader(is, charCoding);
+            try (Reader r =
+                    new InputStreamReader(
+                            is,
+                            charCoding == null ? Charset.defaultCharset().name() : charCoding)) {
+                return readReader(r, chunkLength);
             }
-            return readReader(r, chunkLength);
-
         } finally {
             if (is != null) is.close();
         }
@@ -1143,10 +1143,12 @@ class Runner implements Runnable, ContextAction<Object> {
         s = script;
     }
 
+    @Override
     public void run() {
         factory.call(this);
     }
 
+    @Override
     public Object run(Context cx) {
         if (f != null) return f.call(cx, scope, scope, args);
         else return s.exec(cx, scope);
